Ensure that the supports logos are fully visible
Set a maximum height so that the image resizes to fit the logo within
the constraints of the `.image-box`. Otherwise it would cut off parts of
the logos on smaller viewports.

--- a/_sass/modules/_supporters.sass
+++ b/_sass/modules/_supporters.sass
@@ -30,4 +30,5 @@
 
     img
       max-width: 90%
+      max-height: 90%
       vertical-align: middle
